fix: add --n-gpu-layers argument with value 999 to gemma-3n-2eb, lfm2-1-2b, and smollm3-3b deployments

--- a/manifests/llm-serving/cpp/gemma-3n-2eb.yaml
+++ b/manifests/llm-serving/cpp/gemma-3n-2eb.yaml
@@ -27,6 +27,8 @@ spec:
             - "8080"
             - --parallel
             - "3"
+            - --n-gpu-layers
+            - "999"
             - --hf-repo
             - unsloth/gemma-3n-E2B-it-GGUF:Q4_K_M
           ports:
