--- a/manifests/llm-serving/cpp/smollm3-3b.yaml
+++ b/manifests/llm-serving/cpp/smollm3-3b.yaml
@@ -27,6 +27,8 @@ spec:
             - "8080"
             - --parallel
             - "3"
+            - --n-gpu-layers
+            - "999"
             - --hf-repo
             - ggml-org/SmolLM3-3B-GGUF:Q4_K_M
             - --jinja
