--- a/manifests/llm-serving/cpp/qwen3-embedding-0-6b.yaml
+++ b/manifests/llm-serving/cpp/qwen3-embedding-0-6b.yaml
@@ -27,6 +27,8 @@ spec:
             - "8080"
             - --parallel
             - "3"
+            - --n-gpu-layers
+            - "999"
             - --hf-repo
             - Qwen/Qwen3-Embedding-0.6B-GGUF:Q8_0
             - --embedding
