fix: restore --parallel argument with value 3 in qwen3-4b-2507 deployment

--- a/manifests/llm-serving/cpp/qwen3-4b-2507.yaml
+++ b/manifests/llm-serving/cpp/qwen3-4b-2507.yaml
@@ -25,6 +25,8 @@ spec:
             - "0.0.0.0"
             - --port
             - "8080"
+            - --parallel
+            - "3"
             - --n-gpu-layers
             - "999"
             - --hf-repo
