fix: ensure assertNoLeakedSecrets is set to false in grafana application values

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -18,6 +18,7 @@ spec:
     helm:
       releaseName: grafana
       values: |
+        assertNoLeakedSecrets: false
         grafana.ini:
           server:
             domain: grafana.ig.ingtra.net
