feat: add auth configuration to disable login in Grafana

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -23,6 +23,8 @@ spec:
           analytics:
             reporting_enabled: false
             check_for_plugin_updates: true
+          auth:
+            disable_login: true
           server:
             domain: grafana.ig.ingtra.net
             root_url: "%(protocol)s://%(domain)s"
