--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -25,6 +25,8 @@ spec:
             check_for_plugin_updates: true
           auth:
             disable_login: true
+            disable_login_form: true
+            disable_signout_menu: true
           server:
             domain: grafana.ig.ingtra.net
             root_url: "%(protocol)s://%(domain)s"
