--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -27,6 +27,10 @@ spec:
             disable_login: true
             disable_login_form: true
             disable_signout_menu: true
+          auth.anonymous:
+            enabled: true
+            org_name: IngtraNet
+            org_role: Admin
           server:
             domain: grafana.ig.ingtra.net
             root_url: "%(protocol)s://%(domain)s"
