--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -29,7 +29,7 @@ spec:
           auth.anonymous:
             enabled: true
             org_name: IngtraNet
-            org_role: Admin
+            org_role: Viewer
           server:
             domain: grafana.ig.ingtra.net
             root_url: "%(protocol)s://%(domain)s"
