feat: update anonymous auth role to Admin and add basic auth configuration in Grafana settings

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -29,7 +29,9 @@ spec:
           auth.anonymous:
             enabled: true
             org_name: IngtraNet
-            org_role: Viewer
+            org_role: Admin
+          auth.basic:
+            enabled: false
           server:
             domain: grafana.ig.ingtra.net
             root_url: "%(protocol)s://%(domain)s"
