--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -28,7 +28,7 @@ spec:
             disable_signout_menu: true
           auth.anonymous:
             enabled: true
-            org_name: IngtraNet
+            org_name: Main Org.
             org_role: Admin
           auth.basic:
             enabled: false
