feat: ensure disable_login setting is enabled in Grafana auth configuration

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -24,6 +24,7 @@ spec:
             reporting_enabled: false
             check_for_plugin_updates: true
           auth:
+            disable_login: true
             disable_login_form: true
             disable_signout_menu: true
           auth.anonymous:
