--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -46,3 +46,45 @@ spec:
     server: https://kubernetes.default.svc
     namespace: monitoring
 
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: tempo
+  namespace: argocd
+spec:
+  project: default
+  source:
+    chart: tempo-distributed
+    repoURL: https://grafana.github.io/helm-charts
+    targetRevision: 1.46.4
+    helm:
+      releaseName: tempo
+      values: |
+        reportingEnabled: false
+        global:
+          clusterDomain: kd.ingtra.net
+          dnsService: rke2-coredns-rke2-coredns
+        ingester:
+          replicas: 2
+        storage:
+          trace:
+            backend: s3
+            s3:
+              bucket: tempo
+              prefix: trace/
+              endpoint: s3.ingtra.net
+              accessKey: system
+              secretKey: systemsecret
+          admin:
+            backend: s3
+            s3:
+              bucket: tempo
+              prefix: admin/
+              endpoint: s3.ingtra.net
+              accessKey: system
+              secretKey: systemsecret
+
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: monitoring
