--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -74,16 +74,16 @@ spec:
               bucket: tempo
               prefix: trace/
               endpoint: s3.ingtra.net
-              accessKey: system
-              secretKey: systemsecret
+              access_key: system
+              secret_key: systemsecret
           admin:
             backend: s3
             s3:
               bucket: tempo
               prefix: admin/
               endpoint: s3.ingtra.net
-              accessKey: system
-              secretKey: systemsecret
+              access_key: system
+              secret_key: systemsecret
 
   destination:
     server: https://kubernetes.default.svc
