--- a/manifests/traefik-configs/monitoring.yaml
+++ b/manifests/traefik-configs/monitoring.yaml
@@ -15,3 +15,21 @@ spec:
           port: 80
   tls:
     secretName: ig-ingtra-net-tls
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: tempo
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`tempo.ig.ingtra.net`)
+      services:
+        - kind: Service
+          name: tempo
+          namespace: monitoring
+          port: 3200
+  tls:
+    secretName: ig-ingtra-net-tls
