--- a/manifests/traefik-configs/monitoring.yaml
+++ b/manifests/traefik-configs/monitoring.yaml
@@ -33,3 +33,39 @@ spec:
           port: 3200
   tls:
     secretName: ig-ingtra-net-tls
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: alloy
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`alloy.ig.ingtra.net`)
+      services:
+        - kind: Service
+          name: alloy
+          namespace: monitoring
+          port: 12345
+  tls:
+    secretName: ig-ingtra-net-tls
+---
+apiVersion: traefik.io/v1alpha1
+kind: IngressRoute
+metadata:
+  name: alloy-otel-http
+spec:
+  entryPoints:
+    - websecure
+  routes:
+    - kind: Rule
+      match: Host(`alloy-otel-http.ig.ingtra.net`)
+      services:
+        - kind: Service
+          name: alloy
+          namespace: monitoring
+          port: 4318
+  tls:
+    secretName: ig-ingtra-net-tls
