feat: enable clustering for alloy application in monitoring.yaml

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -92,6 +92,8 @@ spec:
       releaseName: alloy
       values: |
         alloy:
+          clustering:
+            enabled: true
           configMap:
             content: |
               otelcol.receiver.otlp "default" {
