--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -111,7 +111,8 @@ spec:
                   metrics = [otelcol.exporter.otlp.signoz.input]
                   logs = [otelcol.exporter.otlp.signoz.input]
                   traces = [
-                    "otelcol.exporter.otlp.signoz.input", "otelcol.exporter.otlp.default.input"
+                    otelcol.exporter.otlp.signoz.input,
+                    otelcol.exporter.otlp.default.input,
                   ]
                 }
               }
