fix: enable metrics generator for tempo in monitoring.yaml

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -64,6 +64,8 @@ spec:
         replicas: 2
         tempo:
           reportingEnabled: false
+          metricsGenerator:
+            enabled: true
           storage:
             trace:
               backend: s3
