--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -61,7 +61,7 @@ spec:
     helm:
       releaseName: tempo
       values: |
-        replicas: 2
+        replicas: 1
         tempo:
           reportingEnabled: false
           ingester:
@@ -143,6 +143,82 @@ spec:
             - name: "otel-http"
               port: 4318
               targetPort: 4318
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: monitoring
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: loki
+  namespace: argocd
+spec:
+  project: default
+  source:
+    chart: loki
+    repoURL: https://grafana.github.io/helm-charts
+    targetRevision: 6.37.0
+    helm:
+      releaseName: loki
+      values: |
+        global:
+          clusterDomain: kd.ingtra.net
+          dnsService: rke2-coredns-rke2-coredns
+        loki:
+          schemaConfig:
+            configs:
+              - from: 2024-04-01
+                store: tsdb
+                object_store: s3
+                schema: v13
+                index:
+                  prefix: loki_index_
+                  period: 24h
+          storage:
+            bucketNames:
+              chunk: loki-chunk
+              ruler: loki-ruler
+              admin: loki-admin
+            type: s3
+            s3:
+              endpoint: s3.ingtra.net
+              accessKeyId: system
+              secretAccessKey: systemsecret
+          ingester:
+            chunk_encoding: snappy
+          tracing:
+            enabled: true
+          querier:
+            max_concurrent: 4
+
+        deploymentMode: SimpleScalable
+
+        backend:
+          replicas: 1
+        read:
+          replicas: 1
+        write:
+          replicas: 1
+        singleBinary:
+          replicas: 0
+        ingester:
+          replicas: 0
+        querier:
+          replicas: 0
+        queryFrontend:
+          replicas: 0
+        queryScheduler:
+          replicas: 0
+        distributor:
+          replicas: 0
+        compactor:
+          replicas: 0
+        indexGateway:
+          replicas: 0
+        bloomCompactor:
+          replicas: 0
+        bloomGateway:
+          replicas: 0
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
