fix: correct bucket name from 'chunk' to 'chunks' in loki configuration

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -176,7 +176,7 @@ spec:
                   period: 24h
           storage:
             bucketNames:
-              chunk: loki-chunk
+              chunks: loki-chunk
               ruler: loki-ruler
               admin: loki-admin
             type: s3
