fix: add lokiCanary configuration to monitoring.yaml

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -219,6 +219,8 @@ spec:
           replicas: 0
         bloomGateway:
           replicas: 0
+        lokiCanary:
+          enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
