fix: update lokiCanary configuration to use Deployment kind in monitoring.yaml

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -220,7 +220,7 @@ spec:
         bloomGateway:
           replicas: 0
         lokiCanary:
-          enabled: false
+          kind: Deployment
   destination:
     server: https://kubernetes.default.svc
     namespace: monitoring
