fix: add victoriametrics-logs-datasource plugin to grafana configuration in monitoring.yaml

--- a/clusters/home/argo-applications/monitoring.yaml
+++ b/clusters/home/argo-applications/monitoring.yaml
@@ -19,6 +19,8 @@ spec:
       releaseName: grafana
       values: |
         assertNoLeakedSecrets: false
+        plugins:
+          - victoriametrics-logs-datasource
         grafana.ini:
           analytics:
             reporting_enabled: false
