--- a/manifests/actions-runner-configs/naraninyeo.yaml
+++ b/manifests/actions-runner-configs/naraninyeo.yaml
@@ -4,6 +4,8 @@ metadata:
   name: cookieshake-naraninyeo
 spec:
   replicas: 1
+  selector:
+    kubernetes.io/arch: amd64
   template:
     spec:
       repository: cookieshake/naraninyeo
