--- a/manifests/knative-configs/serving.yaml
+++ b/manifests/knative-configs/serving.yaml
@@ -2,3 +2,12 @@ apiVersion: operator.knative.dev/v1beta1
 kind: KnativeServing
 metadata:
   name: knative-serving
+spec:
+  ingress:
+    kourier:
+      enabled: true
+  config:
+    domain:
+      ks.ingtra.net: ""
+    network:
+      ingress-class: "kourier.ingress.networking.knative.dev"
