fix: ensure istio ingress is disabled in knative-serving configuration

--- a/manifests/knative-configs/serving.yaml
+++ b/manifests/knative-configs/serving.yaml
@@ -4,6 +4,8 @@ metadata:
   name: knative-serving
 spec:
   ingress:
+    istio:
+      enabled: false
     kourier:
       enabled: true
       service-type: ClusterIP
