fix: update namespaces for knative operator, serving, and service configurations

--- a/manifests/knative-configs/serving.yaml
+++ b/manifests/knative-configs/serving.yaml
@@ -2,10 +2,9 @@ apiVersion: operator.knative.dev/v1beta1
 kind: KnativeServing
 metadata:
   name: knative-serving
+  namespace: knative-serving
 spec:
   ingress:
-    istio:
-      enabled: false
     kourier:
       enabled: true
   config:
