--- a/clusters/home/argo-applications/knative.yaml
+++ b/clusters/home/argo-applications/knative.yaml
@@ -1,7 +1,17 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: knative
+  name: knative-operator
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: knative-serving
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: knative-service
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -18,7 +28,7 @@ spec:
       releaseName: knative-operator
   destination:
     server: https://kubernetes.default.svc
-    namespace: knative
+    namespace: knative-operator
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -35,4 +45,3 @@ spec:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: knative
