--- a/manifests/knative-configs/test.yaml
+++ b/manifests/knative-configs/test.yaml
@@ -2,6 +2,7 @@ apiVersion: serving.knative.dev/v1
 kind: Service
 metadata:
   name: hello
+  namespace: knative-service
 spec:
   template:
     spec:
