fix: add missing newline and ensure proper formatting in knative-serving manifest

--- a/manifests/knative-configs/serving.yaml
+++ b/manifests/knative-configs/serving.yaml
@@ -13,3 +13,5 @@ spec:
       ks.ingtra.net: ""
     network:
       ingress-class: "kourier.ingress.networking.knative.dev"
+      default-external-scheme: "https"
+      domain-template: "{{.Name}}.{{.Domain}}"
