--- a/clusters/home/argo-applications/knative.yaml
+++ b/clusters/home/argo-applications/knative.yaml
@@ -45,3 +45,20 @@ spec:
       recurse: true
   destination:
     server: https://kubernetes.default.svc
+---
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: knative-services
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/ingtranet/argocd-manifests.git
+    path: manifests/knative-services
+    targetRevision: HEAD
+    directory:
+      recurse: true
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: knative-service
