fix: remove obsolete selector and ensure proper node selection in naraninyeo deployment

--- a/manifests/actions-runner-configs/naraninyeo.yaml
+++ b/manifests/actions-runner-configs/naraninyeo.yaml
@@ -4,9 +4,8 @@ metadata:
   name: cookieshake-naraninyeo
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: cookieshake-naraninyeo
+  nodeSelector:
+    kubernetes.io/arch: amd64
   template:
     spec:
       repository: cookieshake/naraninyeo
