fix: correct typo in valuesObject for gha-runner-naraninyeo configuration

--- a/clusters/home/argo-applications/actions-runner-controller.yaml
+++ b/clusters/home/argo-applications/actions-runner-controller.yaml
@@ -37,7 +37,7 @@ spec:
     targetRevision: 0.12.1
     helm:
       releaseName: gha-runner-naraninyeo
-      valueObject:
+      valuesObject:
         githubConfigUrl: https://github.com/cookieshake/naraninyeo
         githubConfigSecret: secrets
   destination:
