Revert "fix: remove obsolete syncPolicy from gha-runner-scale-set-controller configuration"
This reverts commit 77429a7dc394fc7e2d5fd03a9170947926d24729.

--- a/clusters/home/argo-applications/actions-runner-controller.yaml
+++ b/clusters/home/argo-applications/actions-runner-controller.yaml
@@ -10,6 +10,9 @@ metadata:
   name: gha-runner-scale-set-controller
   namespace: argocd
 spec:
+  syncPolicy:
+    syncOptions:
+      - ServerSideApply=true
   project: default
   source:
     path: .
