fix: add controllerServiceAccount details to gha-runner-naraninyeo configuration

--- a/clusters/home/argo-applications/actions-runner-controller.yaml
+++ b/clusters/home/argo-applications/actions-runner-controller.yaml
@@ -40,6 +40,9 @@ spec:
       valuesObject:
         githubConfigUrl: https://github.com/cookieshake/naraninyeo
         githubConfigSecret: secrets
+        controllerServiceAccount:
+          namespace: actions-runner
+          name: gha-runner-scale-set-controller-gha-rs-controller
   destination:
     server: https://kubernetes.default.svc
     namespace: actions-runner
