--- a/clusters/home/argo-applications/actions-runner-controller.yaml
+++ b/clusters/home/argo-applications/actions-runner-controller.yaml
@@ -43,6 +43,8 @@ spec:
         controllerServiceAccount:
           namespace: actions-runner
           name: gha-runner-scale-set-controller-gha-rs-controller
+        containerMode:
+          type: kubernetes
         template:
           spec:
             nodeSelector:
