fix: update storageClassName to synology-nfs-csi in gha-runner-naraninyeo configuration

--- a/clusters/home/argo-applications/actions-runner-controller.yaml
+++ b/clusters/home/argo-applications/actions-runner-controller.yaml
@@ -55,7 +55,7 @@ spec:
                   volumeClaimTemplate:
                     spec:
                       accessModes: [ "ReadWriteOnce" ]
-                      storageClassName: "local-path"
+                      storageClassName: "	synology-nfs-csi"
                       resources:
                         requests:
                           storage: 1Gi
