fix: update container configuration and storageClassName in gha-runner-naraninyeo application

--- a/clusters/home/argo-applications/actions-runner-controller.yaml
+++ b/clusters/home/argo-applications/actions-runner-controller.yaml
@@ -49,13 +49,29 @@ spec:
           spec:
             nodeSelector:
               kubernetes.io/arch: amd64
+            containers:
+            - name: runner
+              image: ghcr.io/actions/actions-runner:latest
+              command: ["/home/runner/run.sh"]
+              env:
+                - name: ACTIONS_RUNNER_CONTAINER_HOOKS
+                  value: /home/runner/k8s/index.js
+                - name: ACTIONS_RUNNER_POD_NAME
+                  valueFrom:
+                    fieldRef:
+                      fieldPath: metadata.name
+                - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
+                  value: "true"
+              volumeMounts:
+                - name: work
+                  mountPath: /home/runner/_work
             volumes:
               - name: work
                 ephemeral:
                   volumeClaimTemplate:
                     spec:
                       accessModes: [ "ReadWriteOnce" ]
-                      storageClassName: "	synology-nfs-csi"
+                      storageClassName: "local-path"
                       resources:
                         requests:
                           storage: 1Gi
