--- a/clusters/home/argo-applications/actions-runner-controller.yaml
+++ b/clusters/home/argo-applications/actions-runner-controller.yaml
@@ -47,34 +47,91 @@ spec:
           type: kubernetes
         template:
           spec:
-            nodeSelector:
-              kubernetes.io/arch: amd64
+            initContainers:
+            - name: init-dind-externals
+              image: ghcr.io/actions/actions-runner:latest
+              command: ["cp", "-r", "/home/runner/externals/.", "/home/runner/tmpDir/"]
+              volumeMounts:
+                - name: dind-externals
+                  mountPath: /home/runner/tmpDir
+            - name: init-dind-rootless
+              image: docker:dind-rootless
+              command:
+                - sh
+                - -c
+                - |
+                  set -x
+                  cp -a /etc/. /dind-etc/
+                  echo 'runner:x:1001:1001:runner:/home/runner:/bin/ash' >> /dind-etc/passwd
+                  echo 'runner:x:1001:' >> /dind-etc/group
+                  echo 'runner:100000:65536' >> /dind-etc/subgid
+                  echo 'runner:100000:65536' >> /dind-etc/subuid
+                  chmod 755 /dind-etc;
+                  chmod u=rwx,g=rx+s,o=rx /dind-home
+                  chown 1001:1001 /dind-home
+              securityContext:
+                runAsUser: 0
+              volumeMounts:
+                - mountPath: /dind-etc
+                  name: dind-etc
+                - mountPath: /dind-home
+                  name: dind-home
+            - name: dind
+              image: docker:dind-rootless
+              args:
+                - dockerd
+                - --host=unix:///run/user/1001/docker.sock
+              securityContext:
+                privileged: true
+                runAsUser: 1001
+                runAsGroup: 1001
+              restartPolicy: Always
+              startupProbe:
+                exec:
+                  command:
+                    - docker
+                    - info
+                initialDelaySeconds: 0
+                failureThreshold: 24
+                periodSeconds: 5
+              volumeMounts:
+                - name: work
+                  mountPath: /home/runner/_work
+                - name: dind-sock
+                  mountPath: /run/user/1001
+                - name: dind-externals
+                  mountPath: /home/runner/externals
+                - name: dind-etc
+                  mountPath: /etc
+                - name: dind-home
+                  mountPath: /home/runner
             containers:
             - name: runner
               image: ghcr.io/actions/actions-runner:latest
               command: ["/home/runner/run.sh"]
               env:
-                - name: ACTIONS_RUNNER_CONTAINER_HOOKS
-                  value: /home/runner/k8s/index.js
-                - name: ACTIONS_RUNNER_POD_NAME
-                  valueFrom:
-                    fieldRef:
-                      fieldPath: metadata.name
-                - name: ACTIONS_RUNNER_REQUIRE_JOB_CONTAINER
-                  value: "true"
+                - name: DOCKER_HOST
+                  value: unix:///run/user/1001/docker.sock
+              securityContext:
+                privileged: true
+                runAsUser: 1001
+                runAsGroup: 1001
               volumeMounts:
                 - name: work
                   mountPath: /home/runner/_work
+                - name: dind-sock
+                  mountPath: /run/user/1001
             volumes:
-              - name: work
-                ephemeral:
-                  volumeClaimTemplate:
-                    spec:
-                      accessModes: [ "ReadWriteOnce" ]
-                      storageClassName: "synology-nfs-csi"
-                      resources:
-                        requests:
-                          storage: 1Gi
+            - name: work
+              emptyDir: {}
+            - name: dind-externals
+              emptyDir: {}
+            - name: dind-sock
+              emptyDir: {}
+            - name: dind-etc
+              emptyDir: {}
+            - name: dind-home
+              emptyDir: {}
   destination:
     server: https://kubernetes.default.svc
     namespace: actions-runner
