fix: add Docker host configuration for runner in gha-runner-naraninyeo application

--- a/clusters/home/argo-applications/actions-runner-controller.yaml
+++ b/clusters/home/argo-applications/actions-runner-controller.yaml
@@ -91,6 +91,7 @@ spec:
                   command:
                     - docker
                     - info
+                    - --host=unix:///run/user/1001/docker.sock
                 initialDelaySeconds: 0
                 failureThreshold: 24
                 periodSeconds: 5
