--- a/manifests/llm-serving/cpp/smollm3-3b.yaml
+++ b/manifests/llm-serving/cpp/smollm3-3b.yaml
@@ -67,9 +67,8 @@ spec:
             failureThreshold: 3
       volumes:
         - name: cache-volume
-          hostPath:
-            path: /mnt/mfs/k8s/llama_cpp/cache
-            type: DirectoryOrCreate
+          persistentVolumeClaim:
+            claimName: llama-cpp-cache-pvc
       nodeSelector:
         nvidia.com/gpu.product: Orin
 ---
