--- a/manifests/vector/http_to_kafka.yaml
+++ b/manifests/vector/http_to_kafka.yaml
@@ -1,4 +1,34 @@
 
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: vector-config
+  namespace: vector
+data:
+  http_to_kafka.toml: |
+    [api]
+    enabled = true
+    address = "0.0.0.0:8686"
+
+    [sources.http_input]
+    type = "http_server"
+    address = "0.0.0.0:80"
+    framing.method = "bytes"
+    query_parameters = ["topic"]
+
+    [sinks.console]
+    type = "console"
+    inputs = ["http_input"]
+    encoding.codec = "text"
+
+    [sinks.kafka_out]
+    type = "kafka"
+    inputs = ["http_input"]
+    bootstrap_servers = "10.3.64.49:19092"
+    topic = "{{ topic }}" # remap에서 추출한 필드 사용
+    encoding.codec = "text"
+    compression = "zstd"
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -48,9 +78,8 @@ spec:
         - /etc/vector/http_to_kafka.toml
       volumes:
       - name: vector-config
-        hostPath:
-          path: /mnt/mfs/k8s/vector
-          type: Directory
+        configMap:
+          name: vector-config
       - name: vector-data
         emptyDir: {}
 ---
