--- a/manifests/naraninyeo-configs/kservice.yaml
+++ b/manifests/naraninyeo-configs/kservice.yaml
@@ -11,7 +11,7 @@ spec:
     spec:
       containers:
         - name: naraninyeo
-          image: ghcr.io/cookieshake/naraninyeo:develop
+          image: ghcr.io/cookieshake/naraninyeo:sha-fac5a8e
           imagePullPolicy: Always
           env:
             - name: MONGODB_URL
@@ -67,7 +67,7 @@ spec:
     spec:
       containers:
         - name: naraninyeo
-          image: ghcr.io/cookieshake/naraninyeo:develop
+          image: ghcr.io/cookieshake/naraninyeo:sha-fac5a8e
           imagePullPolicy: Always
           env:
             - name: MONGODB_URL
