--- a/manifests/traefik-configs/naraninyeo.yaml
+++ b/manifests/traefik-configs/naraninyeo.yaml
@@ -1,19 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: naraninyeo-main-external
-spec:
-  type: ExternalName
-  externalName: naraninyeo-main.ks.ingtra.net
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: naraninyeo-develop-external
-spec:
-  type: ExternalName
-  externalName: naraninyeo-develop.ks.ingtra.net
----
 apiVersion: traefik.io/v1alpha1
 kind: IngressRoute
 metadata:
@@ -25,13 +9,13 @@ spec:
     - kind: Rule
       match: Host(`naraninyeo-handler.ig.ingtra.net`)
       services:
-        - name: naraninyeo-main-external
-          port: 443
-          scheme: https
-          weight: 5
-        - name: naraninyeo-develop-external
-          port: 443
-          scheme: https
+        - name: naraninyeo-main
+          namespace: naraninyeo
+          port: 80
           weight: 1
+        - name: naraninyeo-develop
+          namespace: naraninyeo
+          port: 80
+          weight: 5
   tls:
     secretName: ig-ingtra-net-tls
